[Complete] Nlog with Textlog

--- a/ZZTDotNetCore.NLogRestApi/appsettings.json
+++ b/ZZTDotNetCore.NLogRestApi/appsettings.json
@@ -1,9 +1,14 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Trace",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DbConnection": "Server=DESKTOP-TVK5D53\\SQL2022;Database=DotNetCore;User ID=sa;Password=@visible1;Trust Server Certificate=True"
+    //"DbConnection": "Server=DESKTOP-2RCKCTJ\\SQLSERVER;Database=DotNetCore;User ID=sa;Password=sasa;Trust Server Certificate=True"
+  }
 }
