--- a/ZZTDotNetCore.NLogRestApi/nlog.config
+++ b/ZZTDotNetCore.NLogRestApi/nlog.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-	<connectionStrings>
+	<!--<connectionStrings>
 		<add name="DbConnection" connectionString="Server=DESKTOP-TVK5D53\\SQL2022;Database=DotNetCore;User ID=sa;Password=@visible1;TrustServerCertificate=True;" providerName="System.Data.SqlClient" />
-	</connectionStrings>
+	</connectionStrings>-->
 	<nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
 		  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		  autoReload="true"
@@ -12,16 +12,17 @@
 		<!-- enable asp.net core layout renderers -->
 		<extensions>
 			<add assembly="NLog.Web.AspNetCore"/>
+			<add assembly="NLog.EasyDbLogger" />
 		</extensions>
 
 		<!-- the targets to write to -->
 		<targets>
 			<!-- File Target for all log messages with basic details -->
-			<target xsi:type="File" name="allfile" fileName="${basedir}/logs/projectname${shortdate}"
+			<target xsi:type="File" name="allfile" fileName="${basedir}/logs/projectname${shortdate}.log"
 					layout="${longdate}|${event-properties:item=EventId:whenEmpty=0}|${level:uppercase=true}|${logger}|${message} ${exception:format=tostring}" />
 
 			<!-- File Target for own log messages with extra web details using some ASP.NET core renderers -->
-			<target xsi:type="File" name="ownFile-web" fileName="${basedir}/logs/projectname${shortdate}"
+			<target xsi:type="File" name="ownFile-web" fileName="${basedir}/logs/projectname${shortdate}.log"
 					layout="${longdate}|${event-properties:item=EventId:whenEmpty=0}|${level:uppercase=true}|${logger}|${message} ${exception:format=tostring}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}" />
 
 			<!--Console Target for hosting lifetime messages to improve Docker / Visual Studio startup detection -->
