--- a/ZZTDotNetCore.Log4netRestApi/log4net.config
+++ b/ZZTDotNetCore.Log4netRestApi/log4net.config
@@ -1,69 +1,81 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-	
-	<!--<log4net>
-		<appender name="RollingLogFileAppender"
-				  type="log4net.Appender.RollingFileAppender">
-			<lockingModel type="log4net.Appender.FileAppender+MinimalLock"/>
-			<file value="D:\TestLog\" />
-			<datePattern value="yyyy-MM-dd.'txt'"/>
-			<staticLogFileName value="false"/>
-			<appendToFile value="true"/>
-			<rollingStyle value="Date"/>
-			<maxSizeRollBackups value="100"/>
-			<maximumFileSize value="15MB"/>
-			<layout type="log4net.Layout.PatternLayout">
-				<conversionPattern
-					value="%date [%thread] %-5level App  %newline %message %newline %newline"/>
+
+	<configSections>
+		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
+	</configSections>
+	<connectionStrings>
+		<add name="DbConnection" connectionString="Server=DESKTOP-TVK5D53\SQL2022;Database=DotNetCore;User ID=sa;Password=@visible1;TrustServerCertificate=True" providerName="System.Data.SqlClient" />
+	</connectionStrings>
+	<log4net>
+		<appender name="RollingFile" type="log4net.Appender.FileAppender">
+			<file value="logs/app.log" />
+			<layout type='log4net.Layout.SerializedLayout, log4net.Ext.Json'>
+				<decorator type='log4net.Layout.Decorators.StandardTypesDecorator, log4net.Ext.Json' />
+				<default />
 			</layout>
 		</appender>
 
-	﻿<log4net>
-		<appender name="Console" type="log4net.Appender.ConsoleAppender">
-			<layout type="log4net.Layout.PatternLayout">
-				<!-- Pattern to output the caller's file name and line number -->
-				<conversionPattern value="%date %5level %logger.%method [%line] - MESSAGE: %message%newline %exception" />
-			</layout>
+		<appender name="AdoNetAppender" type="log4net.Appender.AdoNetAppender">
+			<bufferSize value="1" />
+			<connectionType value="System.Data.SqlClient.SqlConnection,   
+   System.Data, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+
+			<connectionStringName value="DbConnection" />
+			<commandText value="INSERT INTO dbo.Log4NetLog ([Date],[Thread],[Level],[Logger],  
+    [Message],[Exception]) VALUES (@log_date, @thread, @log_level,   
+    @logger, @message, @exception)" />
+			<parameter>
+				<parameterName value="@log_date" />
+				<dbType value="DateTime" />
+				<layout type="log4net.Layout.RawTimeStampLayout" />
+			</parameter>
+			<parameter>
+				<parameterName value="@thread" />
+				<dbType value="String" />
+				<size value="255" />
+				<layout type="log4net.Layout.PatternLayout">
+					<conversionPattern value="%thread" />
+				</layout>
+			</parameter>
+			<parameter>
+				<parameterName value="@log_level" />
+				<dbType value="String" />
+				<size value="50" />
+				<layout type="log4net.Layout.PatternLayout">
+					<conversionPattern value="%level" />
+				</layout>
+			</parameter>
+			<parameter>
+				<parameterName value="@logger" />
+				<dbType value="String" />
+				<size value="255" />
+				<layout type="log4net.Layout.PatternLayout">
+					<conversionPattern value="%logger" />
+				</layout>
+			</parameter>
+			<parameter>
+				<parameterName value="@message" />
+				<dbType value="String" />
+				<size value="4000" />
+				<layout type="log4net.Layout.PatternLayout">
+					<conversionPattern value="%message" />
+				</layout>
+			</parameter>
+			<parameter>
+				<parameterName value="@exception" />
+				<dbType value="String" />
+				<size value="2000" />
+				<layout type="log4net.Layout.ExceptionLayout" />
+			</parameter>
 		</appender>
-		<appender name="RollingFile" type="log4net.Appender.RollingFileAppender">
-			<file value="example.log" />
-			<appendToFile value="true" />
-			<maximumFileSize value="100KB" />
-			<maxSizeRollBackups value="2" />
-			<layout type="log4net.Layout.PatternLayout">
-				<conversionPattern value="%date %5level %logger.%method [%line] - MESSAGE: %message%newline %exception" />
-			</layout>
-		</appender>
-		<appender name="TraceAppender" type="log4net.Appender.TraceAppender">
-			<layout type="log4net.Layout.PatternLayout">
-				<conversionPattern value="%date %5level %logger.%method [%line] - MESSAGE: %message%newline %exception" />
-			</layout>
-		</appender>
-		<appender name="ConsoleAppender" type="log4net.Appender.ManagedColoredConsoleAppender">
-			<mapping>
-				<level value="ERROR" />
-				<foreColor value="Red" />
-			</mapping>
-			<mapping>
-				<level value="WARN" />
-				<foreColor value="Yellow" />
-			</mapping>
-			<mapping>
-				<level value="INFO" />
-				<foreColor value="White" />
-			</mapping>
-			<mapping>
-				<level value="DEBUG" />
-				<foreColor value="Green" />
-			</mapping>
-			<layout type="log4net.Layout.PatternLayout">
-				<conversionPattern value="%date %5level %logger.%method [%line] - MESSAGE: %message%newline %exception" />
-			</layout>
-		</appender>
+		
 		<root>
-			<level value="TRACE" />
+			<level value="ALL" />
 			<appender-ref ref="RollingFile" />
+			<appender-ref ref="AdoNetAppender"></appender-ref>
 		</root>
-	</log4net>
 
+	</log4net>
+	
 </configuration>
