--- a/ZZTDotNetCore.NLogRestApi/ZZTDotNetCore.NLogRestApi.csproj
+++ b/ZZTDotNetCore.NLogRestApi/ZZTDotNetCore.NLogRestApi.csproj
@@ -11,6 +11,7 @@
 	<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.14" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.14" />
     <PackageReference Include="NLog" Version="5.2.8" />
+    <PackageReference Include="NLog.Database" Version="5.2.8" />
     <PackageReference Include="NLog.EasyDbLogger" Version="1.1.3" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="5.3.8" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
