--- a/ZZTDotNetCore.NLogRestApi/nlog.config
+++ b/ZZTDotNetCore.NLogRestApi/nlog.config
@@ -1,13 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-	<!--<connectionStrings>
-		<add name="DbConnection" connectionString="Server=DESKTOP-TVK5D53\\SQL2022;Database=DotNetCore;User ID=sa;Password=@visible1;TrustServerCertificate=True;" providerName="System.Data.SqlClient" />
-	</connectionStrings>-->
+
 	<nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
-		  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		  autoReload="true"
-		  internalLogLevel="Info"
-		  internalLogFile="${basedir}/logs/projectname${shortdate}.txt">
+			  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+			  autoReload="true"
+			  internalLogLevel="Info"
+			  internalLogFile="${basedir}/logs/projectname.txt">
 
 		<!-- enable asp.net core layout renderers -->
 		<extensions>
@@ -24,9 +22,40 @@
 			<!--Console Target for hosting lifetime messages to improve Docker / Visual Studio startup detection -->
 			<target xsi:type="Console" name="lifetimeConsole" layout="${MicrosoftConsoleLayout}" />
 
-			<target name="dbLogger" type="EasyDbLoggerTarget" ApplicationName="Sample" ConnectionStringName="DbConnection"/>
-			<!--<target xsi:type="File" name="f" fileName="${basedir}/logs/${shortdate}.log"
-					layout="${longdate} ${uppercase:${level}} ${message}" />-->
+			<!--Database Target with Script for creating the dbo.Log table.
+
+			SET ANSI_NULLS ON
+			SET QUOTED_IDENTIFIER ON
+			CREATE TABLE [dbo].[Log] (
+			[Id] [int] IDENTITY(1,1) NOT NULL,
+			[MachineName] [nvarchar](50) NOT NULL,
+			[Logged] [datetime] NOT NULL,
+			[Level] [nvarchar](50) NOT NULL,
+			[Message] [nvarchar](max) NOT NULL,
+			[Logger] [nvarchar](250) NULL,
+			[Exception] [nvarchar](max) NULL,
+			CONSTRAINT [PK_dbo.Log] PRIMARY KEY CLUSTERED ([Id] ASC)
+			WITH (PAD_INDEX  = OFF, STATISTICS_NORECOMPUTE  = OFF, IGNORE_DUP_KEY = OFF, ALLOW_ROW_LOCKS  = ON, ALLOW_PAGE_LOCKS  = ON) ON [PRIMARY]
+			) ON [PRIMARY]-->
+
+			<target name="database" xsi:type="Database" >
+				<connectionString>Server=DESKTOP-TVK5D53\SQL2022;Database=DotNetCore;User ID=sa;Password=@visible1;TrustServerCertificate=True</connectionString>
+				<commandText>
+					insert into dbo.Log (
+					MachineName, Logged, Level, Message,
+					Logger, Exception
+					) values (
+					@MachineName, @Logged, @Level, @Message,
+					@Logger, @Exception
+					);
+				</commandText>
+				<parameter name="@MachineName" layout="${machinename}" />
+				<parameter name="@Logged" layout="${date}" />
+				<parameter name="@Level" layout="${level}" />
+				<parameter name="@Message" layout="${message}" />
+				<parameter name="@Logger" layout="${logger}" />
+				<parameter name="@Exception" layout="${exception:tostring}" />
+			</target>
 
 		</targets>
 
@@ -42,7 +71,7 @@
 
 			<logger name="*" minlevel="Trace" writeTo="ownFile-web" />
 
-			<logger name="*" minlevel="Debug" writeTo="dbLogger" />
+			<logger name="*" minlevel="Debug" writeTo="database" />
 		</rules>
 	</nlog>
 </configuration>
