[Complete] Log4net DbLog with RestApi

--- a/ZZTDotNetCore.Log4netRestApi/log4net.config
+++ b/ZZTDotNetCore.Log4netRestApi/log4net.config
@@ -1,18 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-
-	<configSections>
-		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
-	</configSections>
-	<connectionStrings>
-		<add name="DbConnection" connectionString="Server=DESKTOP-TVK5D53\SQL2022;Database=DotNetCore;User ID=sa;Password=@visible1;TrustServerCertificate=True" providerName="System.Data.SqlClient" />
-	</connectionStrings>
 	<log4net>
-		<appender name="RollingFile" type="log4net.Appender.FileAppender">
+		<appender name="RollingFile" type="log4net.Appender.RollingFileAppender">
 			<file value="logs/app.log" />
-			<layout type='log4net.Layout.SerializedLayout, log4net.Ext.Json'>
-				<decorator type='log4net.Layout.Decorators.StandardTypesDecorator, log4net.Ext.Json' />
-				<default />
+			<rollingStyle value="Composite"/>
+			<maximumFileSize value="1024KB" />
+			<maxSizeRollBackups value="1" />
+			<layout type="log4net.Layout.PatternLayout">
+				<conversionPattern value="%date %5level %logger.%method [%line] - MESSAGE: %message%newline %exception" />
 			</layout>
 		</appender>
 
@@ -69,13 +64,11 @@
 				<layout type="log4net.Layout.ExceptionLayout" />
 			</parameter>
 		</appender>
-		
 		<root>
 			<level value="ALL" />
 			<appender-ref ref="RollingFile" />
 			<appender-ref ref="AdoNetAppender"></appender-ref>
 		</root>
-
 	</log4net>
 	
 </configuration>
